--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -44,6 +44,10 @@
         android:title="@string/overview_events"
         app:key="overview_events"
         app:useSimpleSummaryProvider="true" />
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="window_flag_secure"
+        android:title="@string/block_screen_capture" />
     <ListPreference
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
