Add iconId to database and save selection

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -62,6 +62,9 @@
         <action
             android:id="@+id/action_editMedicineFragment_to_medicineCalendarFragment"
             app:destination="@id/calendarFragment" />
+        <argument
+            android:name="iconId"
+            app:argType="integer" />
     </fragment>
     <argument
         android:name="reminderId"
