--- a/app/src/main/res/layout/fragment_next_reminder.xml
+++ b/app/src/main/res/layout/fragment_next_reminder.xml
@@ -29,6 +29,7 @@
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:contentDescription="@string/icon"
                 app:srcCompat="@drawable/capsule" />
 
             <Space
