--- a/app/src/main/res/layout/fragment_latest_reminder.xml
+++ b/app/src/main/res/layout/fragment_latest_reminder.xml
@@ -23,6 +23,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/latestReminderIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/icon"
+                app:srcCompat="@drawable/capsule" />
+
             <Space
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
