--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -32,6 +32,7 @@
             android:ems="10"
             android:gravity="start|top"
             android:hint="@string/no_reminders"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine"
+            android:minHeight="48dp" />
     </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
