--- a/app/src/main/res/layout/fragment_edit_medicine.xml
+++ b/app/src/main/res/layout/fragment_edit_medicine.xml
@@ -109,6 +109,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
+            android:contentDescription="@string/reminders"
             android:paddingBottom="60dp"
             android:scrollbars="vertical" />
     </LinearLayout>
