Fix editing of delay and hint

--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -21,6 +21,7 @@
             android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/editReminderTimeLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
